--- a/avia/avia.html
+++ b/avia/avia.html
@@ -105,7 +105,7 @@
                             <use href="./img/sub-header/icons-2.svg#icon-arrow" use>
                         </svg>
                     </li>
-                    <li>
+                    <li class="avia">
                         <a href="">Авиа</a>
                         <svg class="team-social-icon" width="6" height="6">
                             <use href="./img/sub-header/icons-2.svg#icon-arrow" use>
@@ -126,7 +126,7 @@
                             <use href="./img/sub-header/icons-2.svg#icon-arrow" use>
                         </svg>
                     </li>
-                    <li class="faq">
+                    <li>
                         <a href="../FAQ/FAQ.html">FAQ</a>
                     </li>
                     <li>
@@ -142,11 +142,55 @@
     <ul class="switch">
         <li><a href="../index.html">Главная</a></li>
         <li>/</li>
-        <li><a href="" class="switch-faq"></a></li>
+        <li><a href="">Авиа</a></li>
+        <li>/</li>
+        <li><a href="" class="switch-faq">Чартерные рейсы в Хорватию</a></li>
+
     </ul>
 
+    <div class="center">
+        <div class="titl">
+            <h2>Чартерные рейсы 
+                в Хорватию</h2>
+        </div>
 
+        <ul class="list">
+            <li class="block-item">
+                <div class="block-title"><p class="number">1</p><span>Чартерные рейсы в Дубровник 1 </span> 
+                    <svg class="block-social-icon" width="7" height="25">
+                        <use href="img/center/list/icon.svg#icon-Vector"></use>
+                    </svg>
+                </div>
+                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </li>
+            <li class="block-item">
+                <div class="block-title"><p class="number">2</p>Чартерные рейсы в Дубровник 2 
+                    <svg class="block-social-icon" width="7" height="25">
+                        <use href="img/center/list/icon.svg#icon-Vector"></use>
+                    </svg>
+                </div>
+                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </li>
+            <li class="block-item">
+                <div class="block-title"><p class="number">3</p> <span>Чартерные рейсы в Дубровник 3 </span> 
+                    <svg class="block-social-icon" width="7" height="25">
+                        <use href="img/center/list/icon.svg#icon-Vector"></use>
+                    </svg>
+                </div>
+                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </li>
+        </ul>
 
+    </div>
 
     <div class="footer">
         <div class="footer-infomatin">
