--- a/avia/avia.html
+++ b/avia/avia.html
@@ -154,9 +154,9 @@
                 в Хорватию</h2>
         </div>
 
-        <ul class="list">
+        <ol  class="list">
             <li class="block-item">
-                <div class="block-title"><p class="number">1</p><span>Чартерные рейсы в Дубровник 1 </span> 
+                <div class="block-title">Чартерные рейсы в Дубровник
                     <svg class="block-social-icon" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
@@ -166,29 +166,29 @@
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-            <li class="block-item">
-                <div class="block-title"><p class="number">2</p>Чартерные рейсы в Дубровник 2 
-                    <svg class="block-social-icon" width="7" height="25">
+            <li class="block-item-two">
+                <div class="block-title-two">Чартерные рейсы в Дубровник 
+                    <svg class="block-social-icon-two" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
                 </div>
-                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <div class="block-text-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-            <li class="block-item">
-                <div class="block-title"><p class="number">3</p> <span>Чартерные рейсы в Дубровник 3 </span> 
-                    <svg class="block-social-icon" width="7" height="25">
+            <li class="block-item-three">
+                <div class="block-title-three">Чартерные рейсы в Дубровник 
+                    <svg class="block-social-icon-three" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
                 </div>
-                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <div class="block-text-three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-        </ul>
+        </ol>
 
     </div>
 
@@ -247,6 +247,10 @@
         </div>
     </div>
 
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Подлючение слайдера Slick -->
+    <script src="./js/slick.min.js"></script>
+    <!-- Подключаем файл скриптов-->
+    <script src="./js/avia.js"></script>  
 </body>
 </html>
