--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -161,7 +161,7 @@
 
         <ul class="list">
             <li class="block-item">
-                <div class="block-title"><p class="number">1</p><span>Lorem ipsum dolor sit amet, consectetur adipiscing 1 </span> 
+                <div class="block-title"><p class="number">1</p>Lorem ipsum dolor sit amet, consectetur adipiscing 1 
                     <svg class="block-social-icon" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
@@ -171,35 +171,35 @@
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-            <li class="block-item">
-                <div class="block-title"><p class="number">2</p>Lorem ipsum dolor sit amet, consectetur adipiscing 2 
-                    <svg class="block-social-icon" width="7" height="25">
+            <li class="block-item-two">
+                <div class="block-title-two"><p class="number-two">2</p>Lorem ipsum dolor sit amet, consectetur adipiscing 2 
+                    <svg class="block-social-icon-two" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
                 </div>
-                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <div class="block-text-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-            <li class="block-item">
-                <div class="block-title"><p class="number">3</p> <span>Lorem ipsum dolor sit amet, consectetur adipiscing 3 </span> 
-                    <svg class="block-social-icon" width="7" height="25">
+            <li class="block-item-three">
+                <div class="block-title-three"><p class="number-three">3</p>Lorem ipsum dolor sit amet, consectetur adipiscing 3 
+                    <svg class="block-social-icon-three" width="7" height="25">
                         <use href="img/center/list/icon.svg#icon-Vector"></use>
                     </svg>
                 </div>
-                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <div class="block-text-three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-            <li class="block-item">
-                <div class="block-title"><p class="number">4</p><span><span>Lorem ipsum dolor sit amet, consectetur adipiscing 4 </span> </span>
-                        <svg class="block-social-icon" width="7" height="25">
+            <li class="block-item-four">
+                <div class="block-title-four"><p class="number-four">4</p><span><span>Lorem ipsum dolor sit amet, consectetur adipiscing 4 </span> </span>
+                        <svg class="block-social-icon-four" width="7" height="25">
                             <use href="img/center/list/icon.svg#icon-Vector"></use>
                         </svg>
                 </div>
-                <div class="block-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <div class="block-text-four">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
