--- a/avia/avia.html
+++ b/avia/avia.html
@@ -154,7 +154,7 @@
                 в Хорватию</h2>
         </div>
 
-        <ol  class="list">
+        <ul  class="list">
             <li class="block-item">
                 <div class="block-title">Чартерные рейсы в Дубровник
                     <svg class="block-social-icon" width="7" height="25">
@@ -188,7 +188,7 @@
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </li>
-        </ol>
+        </ul>
 
     </div>
 
