--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <a href="">Каталог туров</a>
                     </li>
                     <li>
-                        <a href="">Агентам</a>
+                        <a href="../agent/agent.html">Агентам</a>
                         <svg class="team-social-icon" width="6" height="6">
                             <use href="./img/sub-header/icons-2.svg#icon-arrow" use>
                         </svg>
@@ -125,6 +125,9 @@
                         <svg class="team-social-icon" width="6" height="6">
                             <use href="./img/sub-header/icons-2.svg#icon-arrow" use>
                         </svg>
+                    </li>
+                    <li>
+                        <a href="">Блог</a>
                     </li>
                     <li>
                         <a href="./FAQ/FAQ.html">FAQ</a>
